Alteracao documentaocao. implementacao API BRASIL, traducao para ingles
